replace cannon library with one that have tree shaking, implement cannon physics to the boxes, floor and character

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "cannon": "^0.6.2",
+    "cannon-es": "^0.20.0",
     "three": "^0.158.0"
   }
 }
