implement yuka for smooth mouse follow in character controller, adjust dynamic camera to follow character, add indicator for target

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "yuka": "^0.7.8"
   }
 }
