add particles library and implemented particles on top of the sphere, fixed all bugs with rotation and shooting

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cannon-es": "^0.20.0",
     "three": "^0.158.0",
+    "three.quarks": "^0.11.2",
     "yuka": "^0.7.8"
   }
 }
