add server side plugin for sockets, implement new client side socket class and connect both

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "three": "^0.158.0",
     "three.quarks": "^0.11.2",
     "yuka": "^0.7.8"
