--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node server/index.js",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^4.4.5"
