--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.5",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "three": "^0.158.0",
+    "three-nebula": "^10.0.3",
     "three.meshline": "^1.4.0",
-    "three.quarks": "^0.11.2",
     "yuka": "^0.7.8"
   }
 }
